[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.0.18", features = ["d1"] }
serde = { version = "1.0.188", features = ["derive"] }
reqwest = "0.11.22"
serde_json = "1.0.107"
futures-util = "0.3.28"
hyper = { version = "0.14", default-features = false, features = ['http1', 'client'] }
tokio = { version = "1.0", default-features=false, features=['io-util', 'macros']}
tokio-postgres = { git="https://github.com/sfackler/rust-postgres", branch="master", features=['js'], default-features=false }

[profile.release]
lto = true
strip = true
codegen-units = 1
